--- a/tutorial/learnr.Rmd
+++ b/tutorial/learnr.Rmd
@@ -181,287 +181,287 @@ quiz(caption = "Test yourself before we move on",
 
 
 
-## Visualising two groups
+<!-- ## Visualising two groups -->
 
-The **boxplot** is a good choice when comparing two groups of data and is often the first plot to create when visualising data for a two-sample *t*-test. It allows us to compare between groups while also retaining information about the distribution of the data, which is important for the test.
+<!-- The **boxplot** is a good choice when comparing two groups of data and is often the first plot to create when visualising data for a two-sample *t*-test. It allows us to compare between groups while also retaining information about the distribution of the data, which is important for the test. -->
 
-###
-In this tutorial we will create a boxplot that is **fit for scientific publication**. Usually this is the *one plot* that you will decide to use to graphically represent your data. Often called a **summary plot**, it should be clear, concise, and informative as it summarises the data in a single plot.
+<!-- ### -->
+<!-- In this tutorial we will create a boxplot that is **fit for scientific publication**. Usually this is the *one plot* that you will decide to use to graphically represent your data. Often called a **summary plot**, it should be clear, concise, and informative as it summarises the data in a single plot. -->
 
-###
-This is in contrast to **exploratory plots** and **diagnostic plots**, which are used to explore the data, check assumptions, and identify issues. Such plots are not usually included in scientific publications but are important for the researcher to understand the data.
+<!-- ### -->
+<!-- This is in contrast to **exploratory plots** and **diagnostic plots**, which are used to explore the data, check assumptions, and identify issues. Such plots are not usually included in scientific publications but are important for the researcher to understand the data. -->
 
 
-### Using `ggplot2` to create a boxplot
+<!-- ### Using `ggplot2` to create a boxplot -->
 
-Load the `ggplot2` package.
+<!-- Load the `ggplot2` package. -->
 
 
-```{r}
-library(ggplot2)
-```
+<!-- ```{r} -->
+<!-- library(ggplot2) -->
+<!-- ``` -->
 
-This package is also loaded if you are using the `tidyverse` package, so `library(tidyverse)` will also load `ggplot2`.
+<!-- This package is also loaded if you are using the `tidyverse` package, so `library(tidyverse)` will also load `ggplot2`. -->
 
-###
-Plotting in `ggplot2` requires data to be in a *specific* format. This format is often referred to as "long" format, and in data science circles it is also called "tidy" data. The `cattle` data is already in this format -- each **row is an observation** and each **column is a variable**. 
+<!-- ### -->
+<!-- Plotting in `ggplot2` requires data to be in a *specific* format. This format is often referred to as "long" format, and in data science circles it is also called "tidy" data. The `cattle` data is already in this format -- each **row is an observation** and each **column is a variable**.  -->
 
-If your data is not in this format e.g. if you have a column for each breed, you will need to manipulate the data to be in this format. You can do this reproducibly in R using the `tidyverse` package, or manually in Excel or Google Sheets.
+<!-- If your data is not in this format e.g. if you have a column for each breed, you will need to manipulate the data to be in this format. You can do this reproducibly in R using the `tidyverse` package, or manually in Excel or Google Sheets. -->
 
-### 
-The advantages of "tidy" data are [numerous](https://vita.had.co.nz/papers/tidy-data.pdf), but the most important one is that R functions are designed to work with data in this format -- so you will save time and effort by keeping your data tidy.
+<!-- ###  -->
+<!-- The advantages of "tidy" data are [numerous](https://vita.had.co.nz/papers/tidy-data.pdf), but the most important one is that R functions are designed to work with data in this format -- so you will save time and effort by keeping your data tidy. -->
 
-Anyway, let's plot the data.
+<!-- Anyway, let's plot the data. -->
 
-### 
+<!-- ###  -->
 
-The most basic plot can be created using the code below:
+<!-- The most basic plot can be created using the code below: -->
 
-```{r}
-ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) +
-  geom_boxplot()
-```
+<!-- ```{r} -->
+<!-- ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) + -->
+<!--   geom_boxplot() -->
+<!-- ``` -->
 
-###
+<!-- ### -->
 
-Above, we are simply calling the `ggplot()` function and specifying the data and aesthetics. We are then adding a `geom_boxplot()` layer to create the boxplot.
+<!-- Above, we are simply calling the `ggplot()` function and specifying the data and aesthetics. We are then adding a `geom_boxplot()` layer to create the boxplot. -->
 
-It works, but it will **not** pass muster for a scientific publication. We need to add labels, a title, and a figure caption. We also want to (in most cases) reduce distractions by removing the gridlines and background colour.
+<!-- It works, but it will **not** pass muster for a scientific publication. We need to add labels, a title, and a figure caption. We also want to (in most cases) reduce distractions by removing the gridlines and background colour. -->
 
-###
-Labels can be added by adding more "layers" to the plot using the `+` operator. The `labs()` function is used to add labels, titles, and captions. We will only add labels for the *x-axis* and *y-axis*. Titles are not necessary in most cases unless we have a multi-panel figure.
+<!-- ### -->
+<!-- Labels can be added by adding more "layers" to the plot using the `+` operator. The `labs()` function is used to add labels, titles, and captions. We will only add labels for the *x-axis* and *y-axis*. Titles are not necessary in most cases unless we have a multi-panel figure. -->
 
-```{r}
-ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) +
-  geom_boxplot() +
-  labs(
-    x = "Breed",
-    y = "Weight (kg)",
-  )
-```
+<!-- ```{r} -->
+<!-- ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) + -->
+<!--   geom_boxplot() + -->
+<!--   labs( -->
+<!--     x = "Breed", -->
+<!--     y = "Weight (kg)", -->
+<!--   ) -->
+<!-- ``` -->
 
-###
-To remove the grid lines and background colour, we can either muck around with the theme settings or use the `theme_classic()` function. This function is part of the `ggplot2` package and is used to remove the background colour and gridlines. 
+<!-- ### -->
+<!-- To remove the grid lines and background colour, we can either muck around with the theme settings or use the `theme_classic()` function. This function is part of the `ggplot2` package and is used to remove the background colour and gridlines.  -->
 
-```{r}
-ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) +
-  geom_boxplot() +
-  labs(
-    x = "Breed",
-    y = "Weight (kg)",
-  ) +
-  theme_classic()
-```
+<!-- ```{r} -->
+<!-- ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) + -->
+<!--   geom_boxplot() + -->
+<!--   labs( -->
+<!--     x = "Breed", -->
+<!--     y = "Weight (kg)", -->
+<!--   ) + -->
+<!--   theme_classic() -->
+<!-- ``` -->
 
-###
-Figures need captions, and applying them uses different methods depending on whether you are producing a `.Rmd` document or a Quarto `.qmd` document. Assuming that you are using Quarto, you want to use the `label` and `fig-cap` options in the code chunk.
+<!-- ### -->
+<!-- Figures need captions, and applying them uses different methods depending on whether you are producing a `.Rmd` document or a Quarto `.qmd` document. Assuming that you are using Quarto, you want to use the `label` and `fig-cap` options in the code chunk. -->
 
-````{verbatim}
-```{r}
-#| label: fig-cattle-boxplot
-#| fig-cap: "Boxplot of cattle weight (kg) by breed."
+<!-- ````{verbatim} -->
+<!-- ```{r} -->
+<!-- #| label: fig-cattle-boxplot -->
+<!-- #| fig-cap: "Boxplot of cattle weight (kg) by breed." -->
 
-ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) +
-  geom_boxplot() +
-  labs(
-    x = "Breed",
-    y = "Weight (kg)",
-  ) +
-  theme_classic()
-```
-````
+<!-- ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) + -->
+<!--   geom_boxplot() + -->
+<!--   labs( -->
+<!--     x = "Breed", -->
+<!--     y = "Weight (kg)", -->
+<!--   ) + -->
+<!--   theme_classic() -->
+<!-- ``` -->
+<!-- ```` -->
 
-This will show the figure caption below the plot. Note that execution options are not visible in the final document (so your `#|` lines will not be visible).
+<!-- This will show the figure caption below the plot. Note that execution options are not visible in the final document (so your `#|` lines will not be visible). -->
 
-```{r fig.cap="Figure 1. Boxplot of cattle weight (kg) by breed."}
-ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) +
-  geom_boxplot() +
-  labs(
-    x = "Breed",
-    y = "Weight (kg)",
-  ) +
-  theme_classic()
-```
+<!-- ```{r fig.cap="Figure 1. Boxplot of cattle weight (kg) by breed."} -->
+<!-- ggplot(data = cattle, mapping = aes(x = Breed, y = Weight)) + -->
+<!--   geom_boxplot() + -->
+<!--   labs( -->
+<!--     x = "Breed", -->
+<!--     y = "Weight (kg)", -->
+<!--   ) + -->
+<!--   theme_classic() -->
+<!-- ``` -->
 
-###
-The plot is now ready for publication, but we have provided the **minimal** amount of information. You can add more layers to the plot to make it more informative. For example, you can change the colours, flip the axes, or add a title. To do so it is important to understand how to search for help using Google, or prompt GenAI to help you, which we will not cover in this tutorial.
+<!-- ### -->
+<!-- The plot is now ready for publication, but we have provided the **minimal** amount of information. You can add more layers to the plot to make it more informative. For example, you can change the colours, flip the axes, or add a title. To do so it is important to understand how to search for help using Google, or prompt GenAI to help you, which we will not cover in this tutorial. -->
 
-###
-You can now go through the code above and run it in this document below. Play around with the code to see how it changes the plot. Once you are ready, hit the **Continue** (or **Next Page**, depending on how you navigated this tutorial) button to move on.
+<!-- ### -->
+<!-- You can now go through the code above and run it in this document below. Play around with the code to see how it changes the plot. Once you are ready, hit the **Continue** (or **Next Page**, depending on how you navigated this tutorial) button to move on. -->
 
-```{r ex-boxplot, exercise=TRUE}
-# Add the code to create the boxplot here
-```
+<!-- ```{r ex-boxplot, exercise=TRUE} -->
+<!-- # Add the code to create the boxplot here -->
+<!-- ``` -->
 
 
-## HATPC
+<!-- ## HATPC -->
 
-Let' use the **HATPC** method to guide us through the statistical analysis for a two-sample *t*-test. 
-The steps are:
+<!-- Let' use the **HATPC** method to guide us through the statistical analysis for a two-sample *t*-test.  -->
+<!-- The steps are: -->
 
-1. **Hypothesis**: State the null and alternative hypotheses.
-2. **Assumptions**: State the assumptions of the test.
-3. **Test**: Perform the test (calculate the test statistic).
-4. **P-value**: Calculate the p-value.
-5. **Conclusion**: Make a conclusion based on the p-value.
+<!-- 1. **Hypothesis**: State the null and alternative hypotheses. -->
+<!-- 2. **Assumptions**: State the assumptions of the test. -->
+<!-- 3. **Test**: Perform the test (calculate the test statistic). -->
+<!-- 4. **P-value**: Calculate the p-value. -->
+<!-- 5. **Conclusion**: Make a conclusion based on the p-value. -->
 
-###
-Work through these steps should be routine for you by now. If you are unsure about any of the steps, you can always refer back to the previous labs and tutorials.
+<!-- ### -->
+<!-- Work through these steps should be routine for you by now. If you are unsure about any of the steps, you can always refer back to the previous labs and tutorials. -->
 
-### Hypothesis
+<!-- ### Hypothesis -->
 
-```{r q-hypothesis, echo=FALSE}
-quiz(caption = "Null and alternate hypotheses",
-  question("What is the null hypothesis for the two-sample t-test?",
-    answer("The two groups have the same mean weight.", correct = TRUE),
-    answer("The two groups have different mean weights."),
-    answer("The two groups have the same median weight."),
-    answer("The two groups have different median weights."),
-    random_answer_order = TRUE),
-  question("What is the alternative hypothesis for the two-sample t-test?",
-    answer("The two groups have different mean weights.", correct = TRUE),
-    answer("The two groups have the same mean weight."),
-    answer("The 'Brown' group has a higher mean weight than the 'Black' group."),
-    answer("The 'Black' group has a higher mean weight than the 'Brown' group."),
-    random_answer_order = TRUE)
-)
-```
-
-### Assumptions
-
-The assumptions of the two-sample *t*-test are:
-
-1. **Normality**: The data in each group is normally distributed.
-2. **Equal variance**: The variance in each group is equal.
-
-### Normality
-
-Lecture 6a covered the normality assumption. Try to work out how you would do it for this data set. 
+<!-- ```{r q-hypothesis, echo=FALSE} -->
+<!-- quiz(caption = "Null and alternate hypotheses", -->
+<!--   question("What is the null hypothesis for the two-sample t-test?", -->
+<!--     answer("The two groups have the same mean weight.", correct = TRUE), -->
+<!--     answer("The two groups have different mean weights."), -->
+<!--     answer("The two groups have the same median weight."), -->
+<!--     answer("The two groups have different median weights."), -->
+<!--     random_answer_order = TRUE), -->
+<!--   question("What is the alternative hypothesis for the two-sample t-test?", -->
+<!--     answer("The two groups have different mean weights.", correct = TRUE), -->
+<!--     answer("The two groups have the same mean weight."), -->
+<!--     answer("The 'Brown' group has a higher mean weight than the 'Black' group."), -->
+<!--     answer("The 'Black' group has a higher mean weight than the 'Brown' group."), -->
+<!--     random_answer_order = TRUE) -->
+<!-- ) -->
+<!-- ``` -->
+
+<!-- ### Assumptions -->
+
+<!-- The assumptions of the two-sample *t*-test are: -->
+
+<!-- 1. **Normality**: The data in each group is normally distributed. -->
+<!-- 2. **Equal variance**: The variance in each group is equal. -->
+
+<!-- ### Normality -->
+
+<!-- Lecture 6a covered the normality assumption. Try to work out how you would do it for this data set.  -->
 
-```{r ex-normality, exercise=TRUE}
-# Click on Hints for help (and answers).
-```
+<!-- ```{r ex-normality, exercise=TRUE} -->
+<!-- # Click on Hints for help (and answers). -->
+<!-- ``` -->
 
-```{r ex-normality-hint-1}
-# You can use the boxplot, histogram, or qqplot 
-# to check for normality. You can also use a formal
-# statistical test such as the Shapiro-Wilk test.
-```
+<!-- ```{r ex-normality-hint-1} -->
+<!-- # You can use the boxplot, histogram, or qqplot  -->
+<!-- # to check for normality. You can also use a formal -->
+<!-- # statistical test such as the Shapiro-Wilk test. -->
+<!-- ``` -->
 
 
-```{r ex-normality-hint-2}
-# Using a boxplot should be simple as you have already done so
-# in the previous exercise.
-ggplot(data = cattle, mapping = aes(x = Weight)) +
-  geom_histogram()
-```
+<!-- ```{r ex-normality-hint-2} -->
+<!-- # Using a boxplot should be simple as you have already done so -->
+<!-- # in the previous exercise. -->
+<!-- ggplot(data = cattle, mapping = aes(x = Weight)) + -->
+<!--   geom_histogram() -->
+<!-- ``` -->
 
-```{r ex-normality-hint-3}
-# QQ-plot
-ggplot(data = cattle, mapping = aes(sample = Weight)) +
-  stat_qq() +
-  stat_qq_line()
-```
+<!-- ```{r ex-normality-hint-3} -->
+<!-- # QQ-plot -->
+<!-- ggplot(data = cattle, mapping = aes(sample = Weight)) + -->
+<!--   stat_qq() + -->
+<!--   stat_qq_line() -->
+<!-- ``` -->
 
-```{r ex-normality-hint-4}
-# Histogram
-ggplot(data = cattle, mapping = aes(x = Weight)) +
-  geom_histogram() +
-  facet_wrap(~ Breed)
-```
+<!-- ```{r ex-normality-hint-4} -->
+<!-- # Histogram -->
+<!-- ggplot(data = cattle, mapping = aes(x = Weight)) + -->
+<!--   geom_histogram() + -->
+<!--   facet_wrap(~ Breed) -->
+<!-- ``` -->
 
-```{r ex-normality-hint-5}
-# Shapiro-Wilk test
-shapiro.test(cattle$Weight)
-```
+<!-- ```{r ex-normality-hint-5} -->
+<!-- # Shapiro-Wilk test -->
+<!-- shapiro.test(cattle$Weight) -->
+<!-- ``` -->
 
 
 
-### Equal variances
+<!-- ### Equal variances -->
 
-Again, use Lecture 6a to work out how you would check for equal variances.
+<!-- Again, use Lecture 6a to work out how you would check for equal variances. -->
 
-```{r ex-equal-variance, exercise=TRUE}
-# Click on Hints for help (and answers).
-```
+<!-- ```{r ex-equal-variance, exercise=TRUE} -->
+<!-- # Click on Hints for help (and answers). -->
+<!-- ``` -->
 
-```{r ex-equal-variance-hint-1}
-# You can use the boxplot to check for equal variances, or
-# perform a statistical test.
-```
+<!-- ```{r ex-equal-variance-hint-1} -->
+<!-- # You can use the boxplot to check for equal variances, or -->
+<!-- # perform a statistical test. -->
+<!-- ``` -->
 
-```{r ex-equal-variance-hint-2}
-# Levene's test
-library(car)
-leveneTest(Weight ~ Breed, data = cattle)
-```
+<!-- ```{r ex-equal-variance-hint-2} -->
+<!-- # Levene's test -->
+<!-- library(car) -->
+<!-- leveneTest(Weight ~ Breed, data = cattle) -->
+<!-- ``` -->
 
 
-```{r ex-equal-variance-hint-3}
-# Bartlett's test
-bartlett.test(Weight ~ Breed, data = cattle)
-```
+<!-- ```{r ex-equal-variance-hint-3} -->
+<!-- # Bartlett's test -->
+<!-- bartlett.test(Weight ~ Breed, data = cattle) -->
+<!-- ``` -->
 
-###
-```{r q-assumptions, echo=FALSE}
-quiz(caption = "Assumption checks",
-  question("Did the data meet the assumptions of normality?",
-    answer("Yes", correct = TRUE),
-    answer("No"),
-    incorrect = "You may need to check the plots and statistical tests again, or refer back to the lecture notes. This is an important step in the analysis."
-  ),
-  question("Did the data meet the assumptions of equal variances?",
-    answer("Yes", correct = TRUE),
-    answer("No"),
-    incorrect = "You may need to check the plots and statistical tests again, or refer back to the lecture notes. This is an important step in the analysis."
-  )
-)
-```
+<!-- ### -->
+<!-- ```{r q-assumptions, echo=FALSE} -->
+<!-- quiz(caption = "Assumption checks", -->
+<!--   question("Did the data meet the assumptions of normality?", -->
+<!--     answer("Yes", correct = TRUE), -->
+<!--     answer("No"), -->
+<!--     incorrect = "You may need to check the plots and statistical tests again, or refer back to the lecture notes. This is an important step in the analysis." -->
+<!--   ), -->
+<!--   question("Did the data meet the assumptions of equal variances?", -->
+<!--     answer("Yes", correct = TRUE), -->
+<!--     answer("No"), -->
+<!--     incorrect = "You may need to check the plots and statistical tests again, or refer back to the lecture notes. This is an important step in the analysis." -->
+<!--   ) -->
+<!-- ) -->
+<!-- ``` -->
 
-### Test
+<!-- ### Test -->
 
-Run the two-sample *t*-test using the `t.test()` function in R. **Remember to specify whether the equal variance assumption is met or not in the function!**
+<!-- Run the two-sample *t*-test using the `t.test()` function in R. **Remember to specify whether the equal variance assumption is met or not in the function!** -->
 
-```{r ex-t-test, exercise=TRUE}
-# Run the two-sample t-test
-```
+<!-- ```{r ex-t-test, exercise=TRUE} -->
+<!-- # Run the two-sample t-test -->
+<!-- ``` -->
 
-```{r ex-t-test-hint}
-# You need to specify the formula and the data frame.
-```
+<!-- ```{r ex-t-test-hint} -->
+<!-- # You need to specify the formula and the data frame. -->
+<!-- ``` -->
 
-```{r ex-t-test-solution}
-fit <- t.test(Weight ~ Breed, data = cattle, var.equal = TRUE)
-fit
-```
+<!-- ```{r ex-t-test-solution} -->
+<!-- fit <- t.test(Weight ~ Breed, data = cattle, var.equal = TRUE) -->
+<!-- fit -->
+<!-- ``` -->
 
 
-### P-value and conclusion
+<!-- ### P-value and conclusion -->
 
-Let's view the results again:
+<!-- Let's view the results again: -->
 
-```{r}
-fit <- t.test(Weight ~ Breed, data = cattle, var.equal = TRUE)
-fit
-```
+<!-- ```{r} -->
+<!-- fit <- t.test(Weight ~ Breed, data = cattle, var.equal = TRUE) -->
+<!-- fit -->
+<!-- ``` -->
 
-You should know how to interpret the results by now. If you are unsure, refer back to the lecture notes or the previous tutorials.
+<!-- You should know how to interpret the results by now. If you are unsure, refer back to the lecture notes or the previous tutorials. -->
 
-You may write your conclusion in the box below. The 
+<!-- You may write your conclusion in the box below. The  -->
 
-```{r ex-conclusion, exercise=TRUE}
-# Write your conclusion here using the comment tag `#`
-```
+<!-- ```{r ex-conclusion, exercise=TRUE} -->
+<!-- # Write your conclusion here using the comment tag `#` -->
+<!-- ``` -->
 
-### 
-Click on the dropdown below to see the solution.
+<!-- ###  -->
+<!-- Click on the dropdown below to see the solution. -->
 
-<details>
-  <summary> **+** Click for Solution</summary>
-  <p>
-  The results of the two-sample t-test show that the p-value is less than 0.05. This means that we reject the null hypothesis and conclude that the two groups have different mean weights. From the results, Brown cows have a significantly higher mean weight than Black cows.
-  </p>
-</details> 
+<!-- <details> -->
+<!--   <summary> **+** Click for Solution</summary> -->
+<!--   <p> -->
+<!--   The results of the two-sample t-test show that the p-value is less than 0.05. This means that we reject the null hypothesis and conclude that the two groups have different mean weights. From the results, Brown cows have a significantly higher mean weight than Black cows. -->
+<!--   </p> -->
+<!-- </details>  -->
 
 
 
